@@ -182,6 +182,22 @@ class PloneGenerator:
                 setUseCombinedLanguageCodes=use_combined,
                 startNeutral=False)
 
+            # Set the first day of the week, defaulting to Sunday, as the
+            # locale data doesn't provide a value for English. European
+            # languages / countries have an entry of Monday, though.
+            calendar = getToolByName(p, "portal_calendar", None)
+            if calendar is not None:
+                first = 6
+                gregorian = locale.dates.calendars.get(u'gregorian', None)
+                if gregorian is not None:
+                    first = gregorian.week.get('firstDay', None)
+                    # on the locale object we have: mon : 1 ... sun : 7
+                    # on the calendar tool we have: mon : 0 ... sun : 6
+                    if first is not None:
+                        first = first - 1
+
+                calendar.firstweekday = first
+
             # Enable visible_ids for non-latin scripts
 
             # See if we have an url normalizer
